# pmdld-ass01-deployment

./: .gitignore  README.md  pyproject.toml
.dvc/: config
app/: __main__.py  config.py  requirements.txt
app/api/: routes.py  schemas.py
app/models/: dataset.py  model.py  scripts.py
client/: api_client.py  app.py  config.py  requirements.txt
dataset/: README.md  analyze.ipynb  data.dvc
deployment/: .dockerignore  Dockerfile.api  Dockerfile.client  docker-compose.yaml
tests/: __main__.py
